--- a/package.json
+++ b/package.json
@@ -3,9 +3,30 @@
   "homepage": "https://github.com/ismailkarsli/crosschat",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node src/index.ts",
+    "build": "tsc"
   },
-  "license": "GPLV3"
+  "license": "GPLV3",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/graphqurl": "^1.0.1",
+    "@types/tmi.js": "^1.8.1",
+    "@types/ws": "^8.5.3",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.4",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "graphql": "^16.6.0",
+    "graphqurl": "^1.0.1",
+    "tmi.js": "^1.8.5",
+    "youtube-chat": "^2.1.1"
+  }
 }
