--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": "^1.0.2",
     "@types/tmi.js": "^1.8.1",
     "axios": "^0.27.2",
+    "axios-tauri-adapter": "ismailkarsli/axios-tauri-adapter",
     "dayjs": "^1.11.5",
     "events": "^3.3.0",
     "pinia": "^2.0.21",
@@ -21,8 +22,7 @@
     "tmi.js": "^1.8.5",
     "typed-emitter": "^2.1.0",
     "vue": "^3.2.37",
-    "youtube-chat": "ismailkarsli/youtube-chat",
-    "axios-tauri-adapter": "ismailkarsli/axios-tauri-adapter"
+    "youtube-chat": "ismailkarsli/youtube-chat"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.5",
