--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@freetube/youtube-chat": "^1.1.2",
     "@tauri-apps/api": "^1.0.2",
-    "@types/tmi.js": "^1.8.1",
     "axios": "^0.27.2",
     "axios-tauri-adapter": "ismailkarsli/axios-tauri-adapter",
     "dayjs": "^1.11.5",
     "events": "^3.3.0",
     "pinia": "^2.0.21",
-    "tauri-settings": "^0.1.2",
+    "randomcolor": "^0.6.2",
     "tmi.js": "^1.8.5",
     "typed-emitter": "^2.1.0",
     "vue": "^3.2.37",
-    "youtube-chat": "ismailkarsli/youtube-chat"
+    "youtube-chat": "ismailkarsli/youtube-chat",
+    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.5",
     "@types/axios": "^0.14.0",
     "@types/node": "^18.7.10",
+    "@types/randomcolor": "^0.5.6",
+    "@types/tmi.js": "^1.8.1",
     "@vitejs/plugin-vue": "^3.0.1",
+    "sass": "^1.54.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.2",
     "vue-tsc": "^0.39.0"
